--- a/package.json
+++ b/package.json
@@ -3,31 +3,25 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start": "node server.js",
+    "build": "ng build --prod",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "heroku-postbuild": "ng build"
+    "test": "ng test"
   },
   "private": true,
-  "engines": { "node": "x.x.x", "npm": "x.x.x" },
   "dependencies": {
     "@angular/animations": "~12.2.0",
-    "@angular/cli": "x.x.x",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
-    "@angular/compiler-cli": "x.x.x",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "express": "^4.17.2",
-    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "save-dev": "^0.0.1-security",
     "tslib": "^2.3.0",
-    "typescript": "x.x.x",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
